--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
   "dependencies": {
     "args": "^5.0.1",
     "axios": "^0.19.2",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "moment": "^2.24.0",
+    "mysql2": "^2.1.0",
+    "sequelize": "^5.21.5"
   }
 }
