--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "allenby-exchange",
   "version": "1.0.0",
   "description": "",
-  "main": "cli.js",
+  "main": "server.js",
   "bin": "cli.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -24,6 +24,7 @@
     "express": "^4.17.1",
     "moment": "^2.24.0",
     "mysql2": "^2.1.0",
-    "sequelize": "^5.21.5"
+    "sequelize": "^5.21.5",
+    "validatorjs": "^3.18.1"
   }
 }
